Fix dark mode box shadow - dark mode styling overode disabling of box shadow

--- a/src/frontend/packages/core/src/shared/components/list/list-table/table-row/table-row.component.scss
+++ b/src/frontend/packages/core/src/shared/components/list/list-table/table-row/table-row.component.scss
@@ -93,8 +93,6 @@
     }
 
     .table-row__inner__expansion.mat-expansion-panel {
-      box-shadow: none;
-      box-sizing: inherit;
       width: 100%;
 
       .table-row__inner__expansion--header {
