--- a/src/frontend/packages/core/src/shared/components/list/list-table/table-row/table-row.component.theme.scss
+++ b/src/frontend/packages/core/src/shared/components/list/list-table/table-row/table-row.component.theme.scss
@@ -11,6 +11,13 @@
     &.in-expanded-row {
       border-left-color: mat-color($foreground, divider);
     }
+
+    &__inner {
+      .table-row__inner__expansion.mat-expansion-panel {
+        box-shadow: none;
+      }
+    }
+
   }
   .table-row-wrapper {
     &__errored {
